[gd_scene load_steps=5 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/Kenney Bold.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="messageLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -36.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 1 )
text = "Coin Dash!"
align = 1

[node name="marginContainer" type="MarginContainer" parent="."]
margin_right = 324.0
margin_bottom = 92.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="scoreLabel" type="Label" parent="marginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 314.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="timeLabel" type="Label" parent="marginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 314.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2

[node name="messageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="startButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -126.0
margin_top = -150.0
margin_right = 126.0
margin_bottom = -50.0
custom_fonts/font = SubResource( 2 )
text = "Start"
[connection signal="pressed" from="startButton" to="." method="_on_startButton_pressed"]
